getMapping by Email